--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,13 @@ body{
     align-items: center;
     justify-content: center;
     width: 50%;
-    width: 380px;
+    width: 400px;
     height: 400px;
     background-color: rgba(255, 255, 255, 0.7);
     border: 2px solid white;
     border-radius: 5px;
     box-shadow: 10px 10px 80px 10px white;
-    margin: 10px;
+    margin: 5px;
 }
 
 h1{
@@ -91,4 +91,27 @@ h1{
 h3{
     margin-top: 20px;
     color: rgb(156, 156, 156);
+}
+
+@media screen and (max-width: 600px){
+    .container{
+        width: 340px;
+        height: 380px;
+        padding: 5px;
+    }
+    h1{
+        font-weight: 800;
+        margin-bottom: 20px;
+    }
+    .info{
+        font-size: 16px;
+    }
+    .hour,.minute,.second,.millisecond{
+        width: 70px;
+        font-size: 42px;
+    }
+    .btn-start,.btn-stop,.btn-reset{
+        width: 90px;
+        padding: 8px;
+    }
 }
